Box Select selects keyframes when they are hidden by "Only Show Selected Curve Keyframes" #82588

Closed
opened 2020-11-10 17:47:23 +01:00 by Luciano Muñoz Sessarego · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-09 22:42, hash: b5d310b569

Short description of error
When "only show selected curve keyframes" is ON, the keyframes of all the unselected curves disapear, but if i box select an area where they are still there they interfere with normal selection

SelectingInvisibleKeys.mp4

Exact steps for others to reproduce the error
Open a new scene.
Create a lot of keyframes in different channels in the default cube.
Bring in a Graph Editor.
Go to View > and turn on "only show selected curve keyframes"
Only select a channel or a couple of them in the graph editor
Draw a big rectangle over an area where there would be keyframes if there would be visible like in the video above.
Done.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-09 22:42, hash: `b5d310b569` **Short description of error** When "only show selected curve keyframes" is ON, the keyframes of all the unselected curves disapear, but if i box select an area where they are still there they interfere with normal selection [SelectingInvisibleKeys.mp4](https://archive.blender.org/developer/F9253651/SelectingInvisibleKeys.mp4) **Exact steps for others to reproduce the error** Open a new scene. Create a lot of keyframes in different channels in the default cube. Bring in a Graph Editor. Go to View > and turn on "only show selected curve keyframes" Only select a channel or a couple of them in the graph editor Draw a big rectangle over an area where there would be keyframes if there would be visible like in the video above. Done.
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz
Sybren A. Stüvel changed title from "only show selected curve keyframes" still selects invisible keyframes with Box Select. to Box Select selects keyframes when they are hidden by "Only Show Selected Curve Keyframes" 2020-11-12 16:48:24 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-11-16 17:33:04 +01:00

This issue was referenced by 02efc0111c

This issue was referenced by 02efc0111c1f7c913b750ca7757ba482fe610af2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82588
No description provided.